isMegaの仕様変更、ダイマックス、キョダイマックスの初実装